--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<app-test-drag-drop></app-test-drag-drop>
+<!-- Only uncomment your selected component -->
+<!-- <app-test-form></app-test-form> -->
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-test-table></app-test-table> -->
+<!-- <app-test-dashboard></app-test-dashboard> -->
+<!-- <app-test-tree></app-test-tree> -->
+<!-- <app-test-drag-drop></app-test-drag-drop> -->
 <router-outlet></router-outlet>
